change style text image

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="fw-bolder">Grace Gross</h1>
-          <h5 class="fst-italic tagline">Your expert in creative marketing.</h5>
+          <h5 class="fst-italic tagline">Creative Business student at Breda University of Applied Sciences.</h5>
         </div>
       </header>
 
@@ -189,7 +189,7 @@
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="www.linkedin.com/in/grace-gross-954b42253" target="_blank">
+                <a class="d-flex align-items-center" href="https://www.linkedin.com/in/grace-gross-954b42253/" target="_blank">
                   <img class="contact-icon" src="images/icons/linkedin.svg" alt="LinkedIn">
                   LinkedIn Profile
                 </a>
