font family added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
           <h1 class="green-background">Grace Gross</h1>
-          <h5 class="fst-italic tagline">Creative Business student at Breda University of Applied Sciences.</h5>
+          <h5 class="kanit-light">Creative Business student at Breda University of Applied Sciences.</h5>
         </div>
       </header>
 
