--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
-          <h1 class="green-background">Grace Gross</h1>
+          <h1 class= >Grace Gross</h1>
           <h5 class="kanit-light">Creative Business student at Breda University of Applied Sciences.</h5>
         </div>
       </header>
@@ -115,7 +115,7 @@
           <!-- We're done with jobs, let's move on to schools -->
 
           <section class="my-3 biography-section">
-            <h2>Education</h2>
+            <h2> Education</h2>
             <ul class="biography-list list-unstyled">
 
               <!-- Top item in education. And by "top", I mean a Bachelor in Creative Business at BUas. -->
@@ -182,7 +182,7 @@
                   +31 6 11662854
                 </a>
               </li>
-              <li class="contact-item">
+              <li class="contact-item hyperlink">
                 <a class="d-flex align-items-center" href="https://www.instagram.com/gracegr0ss/" target="_blank">
                   <img class="contact-icon" src="images/icons/instagram.svg" alt="Instagram">
                   Instagram Profile
