--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
-          <h1 class= >Grace Gross</h1>
+          <h1>Grace Gross</h1>
           <h5 class="kanit-light">Creative Business student at Breda University of Applied Sciences.</h5>
         </div>
       </header>
