--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           A container to wrap around your name and tagline. Full-width at small size, then columns of increasing size.
         -->
         <div class="col-12 col-sm-8 col-md-9 col-lg-10 my-3 header-content">
-          <h1>Grace Gross</h1>
-          <h5 class="kanit-light">Creative Business student at Breda University of Applied Sciences.</h5>
+          <h1 class="light-background">Grace Gross</h1>
+          <h5 class="kanit-light light-background">Creative Business student at Breda University of Applied Sciences.</h5>
         </div>
       </header>
 
