--- a/index.html
+++ b/index.html
@@ -171,25 +171,25 @@
             -->
             <ul class="contact-list list-unstyled">
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="mailto:222206@buas.nl" target="_blank">
+                <a class="d-flex align-items-center" href="mailto:222206@buas.nl" target="_blank" style="color: #43436f;">
                   <img class="contact-icon" src="images/icons/envelope.svg" alt="Email">
                   222206@buas.nl
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="tel:+31611662854" target="_blank">
+                <a class="d-flex align-items-center" href="tel:+31611662854" target="_blank" style="color: #43436f;">
                   <img class="contact-icon" src="images/icons/phone.svg" alt="Mobile Phone">
                   +31 611662854
                 </a>
               </li>
-              <li class="contact-item hyperlink">
-                <a class="d-flex align-items-center" href="https://www.instagram.com/gracegr0ss/" target="_blank">
+              <li class="contact-item ">
+                <a class="d-flex align-items-center" href="https://www.instagram.com/gracegr0ss/" target="_blank" style="color: #43436f;">
                   <img class="contact-icon" src="images/icons/instagram.svg" alt="Instagram">
                   Instagram Profile
                 </a>
               </li>
               <li class="contact-item">
-                <a class="d-flex align-items-center" href="https://www.linkedin.com/in/grace-gross-954b42253/" target="_blank">
+                <a class="d-flex align-items-center" href="https://www.linkedin.com/in/grace-gross-954b42253/" target="_blank" style="color: #43436f;">
                   <img class="contact-icon" src="images/icons/linkedin.svg" alt="LinkedIn">
                   LinkedIn Profile
                 </a>
